veil-tests/src/compile_tests/fail/pii_non_struct.rs
fn main() {}

#[derive(veil::Pii)]
enum Foo {}

#[derive(veil::Pii)]
union Bar {
    a: i32
}
